<package format="2">
    <name>jarvis_pid</name>
    <version>0.0.1</version>
    <description>jarvis_robot PID dynamic_reconfigure</description>
    <author>Loc Tran Thanh</author>
    <maintainer email="loctranthanh36@gmail.com">Loc Tran Thanh</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>jarvis_msgs</depend>
</package>
